objects/pse__Version__c.object
<CustomObject>
    <customHelpPage>pse__VersionHelp</customHelpPage>
    <description>A read-only copy of a project used to compare changes against an active project.</description>
    <fields>
        <fullName>pse__Baseline__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, indicates the version is the baseline for the project.</description>
        <inlineHelpText>Select to define the project version as the project baseline. A baseline is a project version identified as the agreed plan for the project. A project can only have one project baseline. You can set a new baseline to remove the previous one.</inlineHelpText>
        <label>Baseline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Apex_Job_Id__c</fullName>
        <description>The ID for the Apex job executing the Versioning batch process.</description>
        <inlineHelpText>The ID for the Apex job executing the Versioning batch process.</inlineHelpText>
        <label>Batch Apex Job Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Batch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related record for the related Versioning batch process.</description>
        <inlineHelpText>The related record for the related Versioning batch process.</inlineHelpText>
        <label>Batch Process</label>
        <referenceTo>pse__fflib_BatchProcess__c</referenceTo>
        <relationshipLabel>Versions</relationshipLabel>
        <relationshipName>Versions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Notes__c</fullName>
        <description>Notes related to the version.</description>
        <inlineHelpText>Notes related to the version.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>pse__Project__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The project related to the version.</description>
        <inlineHelpText>The project related to the version.</inlineHelpText>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Managed Versions</relationshipLabel>
        <relationshipName>Version</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Status__c</fullName>
        <description>The status of the version. When the status is Processing, this indicates processes are modifying the version. When the status is Complete, the version data is fixed and ready for use in a comparison.</description>
        <inlineHelpText>The status of the version. When the status is Processing, this indicates processes are modifying the version. When the status is Complete, the version data is fixed and ready for use in a comparison.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Ready</fullName>
                </value>
                <value>
                    <fullName>Deleting</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Version</label>
    <listViews>
        <fullName>pse__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Version Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>pse__Cannot_become_baseline_when_deleting</fullName>
        <active>true</active>
        <description>Error message indicating the version cannot be defined as a baseline as it is being deleted.</description>
        <errorConditionFormula>AND( pse__Baseline__c  = true, ISPICKVAL (pse__Status__c, &apos;Deleting&apos;))</errorConditionFormula>
        <errorMessage>Your selected version is queued for deletion and cannot be set as a baseline.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>pse__Version_should_have_a_name</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
        <errorMessage>Enter a name for this project version.</errorMessage>
    </validationRules>
</CustomObject>